Add PhysicalLineEmulator showcase to ring spot demo

--- a/tutorial/ring_spot_demo.ipynb
+++ b/tutorial/ring_spot_demo.ipynb
@@ -1,228 +1,279 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Ring spot helper demonstration"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Ring spot helper demonstration\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "This notebook demonstrates the analytic ring spot helper using the same mesh API that powers ``add_spot`` and ``add_pulsation``.\n",
+        "We'll build a base ``IcosphereModel``, perturb its temperature and gravity columns with ``add_ring_spot``, and forward the spotted\n",
+        "mesh through the ``PhysicalLineEmulator`` to see how the bright ring reshapes a Ca II IRT-like spectral line.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Imports and configuration\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import jax\n",
+        "import jax.numpy as jnp\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "from spice.models import IcosphereModel\n",
+        "from spice.models.spots import add_ring_spot, RingSpotConfig\n",
+        "from spice.utils.ring_spot import ring_spot_weights, ca_irt_scale_map\n",
+        "from spice.spectrum import PhysicalLineEmulator\n",
+        "\n",
+        "plt.style.use('seaborn-v0_8')\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Build a base mesh and apply ``add_ring_spot``\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cfg = RingSpotConfig()\n",
+        "base_temp = 5700.0\n",
+        "base_logg = 4.35\n",
+        "\n",
+        "mesh = IcosphereModel.construct(\n",
+        "    2000,\n",
+        "    1.0,\n",
+        "    1.0,\n",
+        "    jnp.array([base_temp, base_logg]),\n",
+        "    ['teff', 'logg']\n",
+        ")\n",
+        "\n",
+        "spot_center_theta = jnp.deg2rad(35.0)\n",
+        "spot_center_phi = jnp.deg2rad(55.0)\n",
+        "\n",
+        "teff_mesh = add_ring_spot(\n",
+        "    mesh,\n",
+        "    spot_center_theta=spot_center_theta,\n",
+        "    spot_center_phi=spot_center_phi,\n",
+        "    param_index=0,\n",
+        "    config=cfg,\n",
+        ")\n",
+        "\n",
+        "spotted_mesh = add_ring_spot(\n",
+        "    teff_mesh,\n",
+        "    spot_center_theta=spot_center_theta,\n",
+        "    spot_center_phi=spot_center_phi,\n",
+        "    param_index=1,\n",
+        "    config=cfg,\n",
+        "    umbra_delta=-0.2,\n",
+        "    plage_delta=0.05,\n",
+        ")\n",
+        "\n",
+        "normals = mesh.d_centers / jnp.linalg.norm(mesh.d_centers, axis=1, keepdims=True)\n",
+        "spot_axis = jnp.array([\n",
+        "    jnp.sin(spot_center_theta) * jnp.cos(spot_center_phi),\n",
+        "    jnp.sin(spot_center_theta) * jnp.sin(spot_center_phi),\n",
+        "    jnp.cos(spot_center_theta),\n",
+        "])\n",
+        "w_umb, w_plage = ring_spot_weights(normals, spot_axis, cfg)\n",
+        "\n",
+        "normals_np = np.array(normals)\n",
+        "lon = np.degrees(np.arctan2(normals_np[:, 1], normals_np[:, 0]))\n",
+        "lat = np.degrees(np.arcsin(normals_np[:, 2]))\n",
+        "\n",
+        "temp_delta = np.array(spotted_mesh.parameters[:, 0] - mesh.parameters[:, 0])\n",
+        "logg_delta = np.array(spotted_mesh.parameters[:, 1] - mesh.parameters[:, 1])\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Umbra and plage weights\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
+        "sc0 = axes[0].scatter(lon, lat, c=np.array(w_umb), s=10, cmap='magma', vmin=0.0)\n",
+        "axes[0].set_title('Umbra weight')\n",
+        "axes[0].set_xlabel('Longitude [deg]')\n",
+        "axes[0].set_ylabel('Latitude [deg]')\n",
+        "fig.colorbar(sc0, ax=axes[0], label='w_umb')\n",
+        "\n",
+        "sc1 = axes[1].scatter(lon, lat, c=np.array(w_plage), s=10, cmap='viridis', vmin=0.0)\n",
+        "axes[1].set_title('Plage weight')\n",
+        "axes[1].set_xlabel('Longitude [deg]')\n",
+        "axes[1].set_ylabel('Latitude [deg]')\n",
+        "fig.colorbar(sc1, ax=axes[1], label='w_plage')\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Parameter perturbations\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
+        "sc0 = axes[0].scatter(lon, lat, c=temp_delta, s=10, cmap='coolwarm')\n",
+        "axes[0].set_title('Temperature perturbation [K]')\n",
+        "axes[0].set_xlabel('Longitude [deg]')\n",
+        "axes[0].set_ylabel('Latitude [deg]')\n",
+        "fig.colorbar(sc0, ax=axes[0], label='\u0394T')\n",
+        "\n",
+        "sc1 = axes[1].scatter(lon, lat, c=logg_delta, s=10, cmap='Spectral')\n",
+        "axes[1].set_title('log g perturbation [dex]')\n",
+        "axes[1].set_xlabel('Longitude [deg]')\n",
+        "axes[1].set_ylabel('Latitude [deg]')\n",
+        "fig.colorbar(sc1, ax=axes[1], label='\u0394log g')\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Feature-specific scaling map (optional)\n",
+        "Use ``ca_irt_scale_map`` to create a per-element multiplier that you can\n",
+        "apply to any spectral mask after running your favorite emulator.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "scale_map = ca_irt_scale_map(normals, spot_axis, cfg, plage_scale=0.6, umbra_scale=-0.4)\n",
+        "\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
+        "axes[0].hist(np.array(scale_map), bins=30, color='tab:blue')\n",
+        "axes[0].set_xlabel('Scale factor')\n",
+        "axes[0].set_ylabel('Count')\n",
+        "axes[0].set_title('Distribution of mask scaling')\n",
+        "\n",
+        "sc = axes[1].scatter(lon, lat, c=np.array(scale_map), s=10, cmap='cividis')\n",
+        "axes[1].set_title('Per-element scaling pattern')\n",
+        "axes[1].set_xlabel('Longitude [deg]')\n",
+        "axes[1].set_ylabel('Latitude [deg]')\n",
+        "fig.colorbar(sc, ax=axes[1], label='scale')\n",
+        "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Disk-integrated ``PhysicalLineEmulator`` example\n",
+        "The same spotted mesh can be pushed through ``PhysicalLineEmulator`` to see how the Ca II 8542 \u00c5 line reacts to the bright ring.\n",
+        "Because the plage wraps around an off-axis latitude, it deepens the blue wing when that sector rotates toward the observer, producing a subtle asymmetry in the disk-integrated line.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "log_wavelengths = jnp.linspace(jnp.log10(8535.0), jnp.log10(8554.0), 600)\n",
+        "wavelength = np.array(10 ** log_wavelengths)\n",
+        "\n",
+        "emulator = PhysicalLineEmulator(\n",
+        "    line_center=8542.09,\n",
+        "    line_depth=0.45,\n",
+        "    atomic_mass=40.078,\n",
+        "    v_micro=2.0,\n",
+        "    gamma0=0.07,\n",
+        "    line_profile_kind='voigt',\n",
+        "    limb_law='quadratic',\n",
+        "    limb_coeffs=(0.3, 0.2),\n",
+        "    use_convective_shift=True,\n",
+        "    v_conv0=1.0,\n",
+        ")\n",
+        "\n",
+        "def synthesize_disk(mesh_model):\n",
+        "    teff = mesh_model.parameters[:, 0]\n",
+        "    logg = mesh_model.parameters[:, 1]\n",
+        "    mu = jnp.clip(mesh_model.mus, 0.0, 1.0)\n",
+        "    visible = mu > 0\n",
+        "    areas = mesh_model.visible_cast_areas\n",
+        "\n",
+        "    def local_spec(t, g, mu_val):\n",
+        "        return emulator.intensity(log_wavelengths, mu_val, jnp.array([t, g]))\n",
+        "\n",
+        "    stacked = jax.vmap(local_spec)(teff[visible], logg[visible], mu[visible])\n",
+        "    I = stacked[..., 0]\n",
+        "    cont = stacked[..., 1]\n",
+        "    weights = areas[visible][:, None]\n",
+        "    flux = jnp.sum(I * weights, axis=0) / jnp.sum(weights)\n",
+        "    cont_flux = jnp.sum(cont * weights, axis=0) / jnp.sum(weights)\n",
+        "    return flux, cont_flux\n",
+        "\n",
+        "flux_base, cont_base = synthesize_disk(mesh)\n",
+        "flux_spotted, cont_spotted = synthesize_disk(spotted_mesh)\n",
+        "\n",
+        "norm_base = np.array(flux_base / cont_base)\n",
+        "norm_spotted = np.array(flux_spotted / cont_spotted)\n",
+        "difference = (norm_spotted - norm_base) * 1e3\n",
+        "\n",
+        "fig, axes = plt.subplots(2, 1, figsize=(9, 7), sharex=True, constrained_layout=True)\n",
+        "axes[0].plot(wavelength, norm_base, label='uniform mesh', lw=2)\n",
+        "axes[0].plot(wavelength, norm_spotted, label='ringed spot mesh', lw=2)\n",
+        "axes[0].set_ylabel('Normalized flux')\n",
+        "axes[0].legend()\n",
+        "axes[0].set_title('Disk-integrated Ca II 8542 \u00c5 profile')\n",
+        "\n",
+        "axes[1].plot(wavelength, difference, color='tab:red')\n",
+        "axes[1].axhline(0.0, color='black', lw=0.8, ls='--')\n",
+        "axes[1].set_ylabel('\u0394 flux [ppt]')\n",
+        "axes[1].set_xlabel('Wavelength [\u00c5]')\n",
+        "axes[1].set_title('Ring spot - uniform (parts per thousand)')\n",
+        "plt.show()\n"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This notebook demonstrates the analytic ring spot helper using the same mesh API that powers `add_spherical_harmonic_spot` or `add_pulsation`, so you can drop it into the usual SPICE surface modeling workflow."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import jax.numpy as jnp\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from spice.models import IcosphereModel\n",
-    "from spice.models.spots import add_ring_spot, RingSpotConfig\n",
-    "from spice.utils.ring_spot import ring_spot_weights, ca_irt_scale_map, apply_ca_irt_scaling_local\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Build a base mesh and apply `add_ring_spot`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "cfg = RingSpotConfig()\n",
-    "base_temp = 5700.0\n",
-    "base_ca = -0.1\n",
-    "\n",
-    "mesh = IcosphereModel.construct(\n",
-    "    2000,\n",
-    "    1.0,\n",
-    "    1.0,\n",
-    "    jnp.array([base_temp, base_ca]),\n",
-    "    ['teff', 'ca']\n",
-    ")\n",
-    "\n",
-    "spot_center_theta = jnp.deg2rad(30.0)\n",
-    "spot_center_phi = jnp.deg2rad(40.0)\n",
-    "spot_axis = jnp.array([\n",
-    "    jnp.sin(spot_center_theta) * jnp.cos(spot_center_phi),\n",
-    "    jnp.sin(spot_center_theta) * jnp.sin(spot_center_phi),\n",
-    "    jnp.cos(spot_center_theta),\n",
-    "])\n",
-    "\n",
-    "# First perturb the temperature column\n",
-    "temp_mesh = add_ring_spot(\n",
-    "    mesh,\n",
-    "    spot_center_theta=spot_center_theta,\n",
-    "    spot_center_phi=spot_center_phi,\n",
-    "    param_index=0,\n",
-    "    config=cfg,\n",
-    ")\n",
-    "# Reuse the same geometry but change the deltas for the Ca abundance column\n",
-    "spotted_mesh = add_ring_spot(\n",
-    "    temp_mesh,\n",
-    "    spot_center_theta=spot_center_theta,\n",
-    "    spot_center_phi=spot_center_phi,\n",
-    "    param_index=1,\n",
-    "    config=cfg,\n",
-    "    umbra_delta=-0.3,\n",
-    "    plage_delta=0.5,\n",
-    ")\n",
-    "\n",
-    "normals = mesh.d_centers / jnp.linalg.norm(mesh.d_centers, axis=1, keepdims=True)\n",
-    "w_umb, w_plage = ring_spot_weights(normals, spot_axis, cfg)\n",
-    "\n",
-    "normals_np = np.array(normals)\n",
-    "lon = np.degrees(np.arctan2(normals_np[:, 1], normals_np[:, 0]))\n",
-    "lat = np.degrees(np.arcsin(normals_np[:, 2]))\n",
-    "\n",
-    "temp_delta = np.array(spotted_mesh.parameters[:, 0] - mesh.parameters[:, 0])\n",
-    "ca_delta = np.array(spotted_mesh.parameters[:, 1] - mesh.parameters[:, 1])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Umbra and plage weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
-    "sc0 = axes[0].scatter(lon, lat, c=np.array(w_umb), s=10, cmap='magma', vmin=0.0)\n",
-    "axes[0].set_title('Umbra weight')\n",
-    "axes[0].set_xlabel('Longitude [deg]')\n",
-    "axes[0].set_ylabel('Latitude [deg]')\n",
-    "fig.colorbar(sc0, ax=axes[0], label='w_umb')\n",
-    "\n",
-    "sc1 = axes[1].scatter(lon, lat, c=np.array(w_plage), s=10, cmap='viridis', vmin=0.0)\n",
-    "axes[1].set_title('Plage ring weight')\n",
-    "axes[1].set_xlabel('Longitude [deg]')\n",
-    "axes[1].set_ylabel('Latitude [deg]')\n",
-    "fig.colorbar(sc1, ax=axes[1], label='w_plage')\n",
-    "\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Parameter perturbations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
-    "sc0 = axes[0].scatter(lon, lat, c=temp_delta, s=10, cmap='coolwarm')\n",
-    "axes[0].set_title('Temperature perturbation [K]')\n",
-    "axes[0].set_xlabel('Longitude [deg]')\n",
-    "axes[0].set_ylabel('Latitude [deg]')\n",
-    "fig.colorbar(sc0, ax=axes[0], label='\u0394T')\n",
-    "\n",
-    "sc1 = axes[1].scatter(lon, lat, c=ca_delta, s=10, cmap='Spectral')\n",
-    "axes[1].set_title('Ca abundance perturbation [dex]')\n",
-    "axes[1].set_xlabel('Longitude [deg]')\n",
-    "axes[1].set_ylabel('Latitude [deg]')\n",
-    "fig.colorbar(sc1, ax=axes[1], label='\u0394[Ca/H]')\n",
-    "\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Ca II IRT scaling factors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "scale_map = ca_irt_scale_map(normals, spot_axis, cfg, plage_scale=0.7, umbra_scale=-0.3)\n",
-    "\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
-    "axes[0].hist(np.array(scale_map), bins=30, color='tab:blue')\n",
-    "axes[0].set_xlabel('Scale factor')\n",
-    "axes[0].set_ylabel('Count')\n",
-    "axes[0].set_title('Distribution of Ca II IRT scaling')\n",
-    "\n",
-    "sc = axes[1].scatter(lon, lat, c=np.array(scale_map), s=10, cmap='plasma')\n",
-    "axes[1].set_title('Spatial map of scaling')\n",
-    "axes[1].set_xlabel('Longitude [deg]')\n",
-    "axes[1].set_ylabel('Latitude [deg]')\n",
-    "fig.colorbar(sc, ax=axes[1], label='S_CaIRT')\n",
-    "\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Applying the scaling to a toy line profile"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "wavelength = jnp.linspace(848.0, 870.0, 800)\n",
-    "I_cont = jnp.ones_like(wavelength)\n",
-    "I_lambda = I_cont - 0.45 * jnp.exp(-0.5 * ((wavelength - 854.2) / 0.45) ** 2)\n",
-    "mask_irt = (wavelength > 852.5) & (wavelength < 856.0)\n",
-    "\n",
-    "scale_example = float(scale_map[np.argmax(np.array(w_plage))])\n",
-    "I_scaled = apply_ca_irt_scaling_local(I_lambda, I_cont, scale_example, mask_irt)\n",
-    "\n",
-    "plt.figure(figsize=(8, 4))\n",
-    "plt.plot(wavelength, I_lambda, label='Original profile')\n",
-    "plt.plot(wavelength, I_scaled, label=f'Scaled (S={scale_example:.2f})')\n",
-    "plt.xlabel('Wavelength [nm]')\n",
-    "plt.ylabel('Normalized intensity')\n",
-    "plt.title('Ca II IRT depth scaling example')\n",
-    "plt.legend()\n",
-    "plt.show()\n"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.10"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
