Add Ca emulator wrapper to ring spot demo

--- a/tutorial/ring_spot_demo.ipynb
+++ b/tutorial/ring_spot_demo.ipynb
@@ -201,6 +201,59 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Wrapping the Ca II emulator\n\n",
+        "To keep the notebook self-contained we can build a tiny helper that configures a ``PhysicalLineEmulator`` for the Ca II IRT line.\n",
+        "It exposes the Ca-specific knobs (line center, depth, damping, etc.) while forwarding any other keyword arguments to ``PhysicalLineEmulator`` so extending the spectral model stays trivial.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def build_ca_irt_emulator(*,\n",
+        "    ca_line_center=8542.09,\n",
+        "    ca_line_depth=0.45,\n",
+        "    ca_atomic_mass=40.078,\n",
+        "    ca_gamma0=0.07,\n",
+        "    limb_coeffs=(0.3, 0.2),\n",
+        "    convective_shift=1.0,\n",
+        "    v_micro=2.0,\n",
+        "    profile_kind='voigt',\n",
+        "    **kwargs,\n",
+        "):\n",
+        "    \"\"\"Return a PhysicalLineEmulator tuned for Ca II 8542 \u00c5.\n\n",
+        "    Extra keyword arguments are forwarded directly to ``PhysicalLineEmulator``,\n",
+        "    which makes it easy to experiment with alternative broadening or limb-darkening\n",
+        "    settings without touching the SPICE internals.\n",
+        "    \"\"\"\n",
+        "    params = dict(\n",
+        "        line_center=ca_line_center,\n",
+        "        line_depth=ca_line_depth,\n",
+        "        atomic_mass=ca_atomic_mass,\n",
+        "        gamma0=ca_gamma0,\n",
+        "        limb_law='quadratic',\n",
+        "        limb_coeffs=limb_coeffs,\n",
+        "        line_profile_kind=profile_kind,\n",
+        "        use_convective_shift=True,\n",
+        "        v_conv0=convective_shift,\n",
+        "        v_micro=v_micro,\n",
+        "    )\n",
+        "    params.update(kwargs)\n",
+        "    return PhysicalLineEmulator(**params)\n",
+        "\n",
+        "emulator = build_ca_irt_emulator(\n",
+        "    ca_line_depth=0.48,  # slightly deeper core than default\n",
+        "    ca_gamma0=0.09,      # extra damping wings\n",
+        "    convective_shift=1.2,\n",
+        ")\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -209,18 +262,6 @@
         "log_wavelengths = jnp.linspace(jnp.log10(8535.0), jnp.log10(8554.0), 600)\n",
         "wavelength = np.array(10 ** log_wavelengths)\n",
         "\n",
-        "emulator = PhysicalLineEmulator(\n",
-        "    line_center=8542.09,\n",
-        "    line_depth=0.45,\n",
-        "    atomic_mass=40.078,\n",
-        "    v_micro=2.0,\n",
-        "    gamma0=0.07,\n",
-        "    line_profile_kind='voigt',\n",
-        "    limb_law='quadratic',\n",
-        "    limb_coeffs=(0.3, 0.2),\n",
-        "    use_convective_shift=True,\n",
-        "    v_conv0=1.0,\n",
-        ")\n",
         "\n",
         "def synthesize_disk(mesh_model):\n",
         "    teff = mesh_model.parameters[:, 0]\n",
