--- a/tutorial/ring_spot_demo.ipynb
+++ b/tutorial/ring_spot_demo.ipynb
@@ -25,7 +25,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
+      "id": "44bed87e",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -33,17 +34,18 @@
         "import jax.numpy as jnp\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
+        "import matplotlib\n",
+        "%matplotlib inline\n",
         "\n",
         "from spice.models import IcosphereModel\n",
         "from spice.models.spots import add_ring_spot, RingSpotConfig\n",
         "from spice.utils.ring_spot import ring_spot_weights, ca_irt_scale_map\n",
-        "from spice.spectrum import PhysicalLineEmulator\n",
-        "\n",
-        "plt.style.use('seaborn-v0_8')\n"
+        "from spice.spectrum import PhysicalLineEmulator\n"
       ]
     },
     {
       "cell_type": "markdown",
+      "id": "8517624d",
       "metadata": {},
       "source": [
         "## Build a base mesh and apply ``add_ring_spot``\n"
@@ -51,11 +53,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
+      "id": "80383024",
       "metadata": {},
       "outputs": [],
       "source": [
-        "cfg = RingSpotConfig()\n",
+        "class CaIrtEmulator(PhysicalLineEmulator):\n",
+        "    def __init__(self, *args, **kwargs):\n",
+        "        super().__init__(*args, **kwargs)\n",
+        "\n",
+        "    def intensity(self, wavelengths, mu, params):\n",
+        "        return super().intensity(wavelengths, mu, params[:-1])*params[-1]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "658b2013",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cfg = RingSpotConfig(\n",
+        "    sigma_umb_deg=10.0,\n",
+        "    theta0_deg=30.0,\n",
+        "    sigma_plage_deg=4.0,\n",
+        "    umbra_delta=-800.0,\n",
+        "    plage_delta=100.0\n",
+        "    )\n",
         "base_temp = 5700.0\n",
         "base_logg = 4.35\n",
         "\n",
@@ -63,8 +87,8 @@
         "    2000,\n",
         "    1.0,\n",
         "    1.0,\n",
-        "    jnp.array([base_temp, base_logg]),\n",
-        "    ['teff', 'logg']\n",
+        "    jnp.array([base_temp, base_logg, 1.0]),\n",
+        "    ['teff', 'logg', 'ca_irt_scale']\n",
         ")\n",
         "\n",
         "spot_center_theta = jnp.deg2rad(35.0)\n",
@@ -106,6 +130,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "bec9aed5",
       "metadata": {},
       "source": [
         "### Umbra and plage weights\n"
@@ -113,9 +138,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
+      "id": "0759b639",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/var/folders/7r/n_x0ntj511v_0gt816mgrc1c0000gq/T/ipykernel_91368/2928994273.py:13: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+            "  plt.show()\n"
+          ]
+        }
+      ],
       "source": [
         "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
         "sc0 = axes[0].scatter(lon, lat, c=np.array(w_umb), s=10, cmap='magma', vmin=0.0)\n",
@@ -134,6 +169,7 @@
     },
     {
       "cell_type": "markdown",
+      "id": "7872cdef",
       "metadata": {},
       "source": [
         "### Parameter perturbations\n"
@@ -141,27 +177,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
+      "id": "682d6d52",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/var/folders/7r/n_x0ntj511v_0gt816mgrc1c0000gq/T/ipykernel_91368/2372763797.py:13: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+            "  plt.show()\n"
+          ]
+        }
+      ],
       "source": [
         "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
         "sc0 = axes[0].scatter(lon, lat, c=temp_delta, s=10, cmap='coolwarm')\n",
         "axes[0].set_title('Temperature perturbation [K]')\n",
         "axes[0].set_xlabel('Longitude [deg]')\n",
         "axes[0].set_ylabel('Latitude [deg]')\n",
-        "fig.colorbar(sc0, ax=axes[0], label='\u0394T')\n",
+        "fig.colorbar(sc0, ax=axes[0], label='ΔT')\n",
         "\n",
         "sc1 = axes[1].scatter(lon, lat, c=logg_delta, s=10, cmap='Spectral')\n",
         "axes[1].set_title('log g perturbation [dex]')\n",
         "axes[1].set_xlabel('Longitude [deg]')\n",
         "axes[1].set_ylabel('Latitude [deg]')\n",
-        "fig.colorbar(sc1, ax=axes[1], label='\u0394log g')\n",
+        "fig.colorbar(sc1, ax=axes[1], label='Δlog g')\n",
         "plt.show()\n"
       ]
     },
     {
       "cell_type": "markdown",
+      "id": "924c993c",
       "metadata": {},
       "source": [
         "### Feature-specific scaling map (optional)\n",
@@ -171,11 +218,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
+      "id": "22f9d452",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/var/folders/7r/n_x0ntj511v_0gt816mgrc1c0000gq/T/ipykernel_91368/4231509721.py:16: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+            "  plt.show()\n"
+          ]
+        }
+      ],
       "source": [
         "scale_map = ca_irt_scale_map(normals, spot_axis, cfg, plage_scale=0.6, umbra_scale=-0.4)\n",
+        "\n",
+        "spotted_mesh = spotted_mesh._replace(parameters=jnp.concatenate([spotted_mesh.parameters[:,:2], scale_map[:, None]], axis=1))\n",
         "\n",
         "fig, axes = plt.subplots(1, 2, figsize=(12, 4), constrained_layout=True)\n",
         "axes[0].hist(np.array(scale_map), bins=30, color='tab:blue')\n",
@@ -193,115 +252,180 @@
     },
     {
       "cell_type": "markdown",
+      "id": "e5b8006f",
       "metadata": {},
       "source": [
         "## Disk-integrated ``PhysicalLineEmulator`` example\n",
-        "The same spotted mesh can be pushed through ``PhysicalLineEmulator`` to see how the Ca II 8542 \u00c5 line reacts to the bright ring.\n",
+        "The same spotted mesh can be pushed through ``PhysicalLineEmulator`` to see how the Ca II 8542 Å line reacts to the bright ring.\n",
         "Because the plage wraps around an off-axis latitude, it deepens the blue wing when that sector rotates toward the observer, producing a subtle asymmetry in the disk-integrated line.\n"
       ]
     },
     {
       "cell_type": "markdown",
+      "id": "335917d5",
       "metadata": {},
       "source": [
-        "### Wrapping the Ca II emulator\n\n",
+        "### Wrapping the Ca II emulator\n",
+        "\n",
         "To keep the notebook self-contained we can build a tiny helper that configures a ``PhysicalLineEmulator`` for the Ca II IRT line.\n",
         "It exposes the Ca-specific knobs (line center, depth, damping, etc.) while forwarding any other keyword arguments to ``PhysicalLineEmulator`` so extending the spectral model stays trivial.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
+      "id": "ced53d30",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/mjablons/Documents/stellar-mesh-integration/src/spice/spectrum/physical_line_emulator.py:182: UserWarning: Explicitly requested dtype <class 'jax.numpy.float64'> requested in array is not available, and will be truncated to dtype float32. To enable more dtypes, set the jax_enable_x64 configuration option or the JAX_ENABLE_X64 shell environment variable. See https://github.com/google/jax#current-gotchas for more.\n",
+            "  self.limb_coeffs = jnp.array(limb_coeffs, dtype=jnp.float64)\n"
+          ]
+        }
+      ],
+      "source": [
+        "LINE_CENTER = 8542.09\n",
+        "\n",
+        "emulator = CaIrtEmulator(\n",
+        "    line_center=LINE_CENTER,\n",
+        "    line_depth=0.45,\n",
+        "    atomic_mass=40.078,\n",
+        "    gamma0=0.07,\n",
+        "    limb_coeffs=(0.3, 0.2),\n",
+        "    use_convective_shift=True,\n",
+        "    v_conv0=1.2,\n",
+        "    v_micro=2.0\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "id": "f212efd9",
       "metadata": {},
       "outputs": [],
       "source": [
-        "def build_ca_irt_emulator(*,\n",
-        "    ca_line_center=8542.09,\n",
-        "    ca_line_depth=0.45,\n",
-        "    ca_atomic_mass=40.078,\n",
-        "    ca_gamma0=0.07,\n",
-        "    limb_coeffs=(0.3, 0.2),\n",
-        "    convective_shift=1.0,\n",
-        "    v_micro=2.0,\n",
-        "    profile_kind='voigt',\n",
-        "    **kwargs,\n",
-        "):\n",
-        "    \"\"\"Return a PhysicalLineEmulator tuned for Ca II 8542 \u00c5.\n\n",
-        "    Extra keyword arguments are forwarded directly to ``PhysicalLineEmulator``,\n",
-        "    which makes it easy to experiment with alternative broadening or limb-darkening\n",
-        "    settings without touching the SPICE internals.\n",
-        "    \"\"\"\n",
-        "    params = dict(\n",
-        "        line_center=ca_line_center,\n",
-        "        line_depth=ca_line_depth,\n",
-        "        atomic_mass=ca_atomic_mass,\n",
-        "        gamma0=ca_gamma0,\n",
-        "        limb_law='quadratic',\n",
-        "        limb_coeffs=limb_coeffs,\n",
-        "        line_profile_kind=profile_kind,\n",
-        "        use_convective_shift=True,\n",
-        "        v_conv0=convective_shift,\n",
-        "        v_micro=v_micro,\n",
-        "    )\n",
-        "    params.update(kwargs)\n",
-        "    return PhysicalLineEmulator(**params)\n",
+        "from spice.spectrum.spectrum import simulate_observed_flux\n",
         "\n",
-        "emulator = build_ca_irt_emulator(\n",
-        "    ca_line_depth=0.48,  # slightly deeper core than default\n",
-        "    ca_gamma0=0.09,      # extra damping wings\n",
-        "    convective_shift=1.2,\n",
-        ")\n"
+        "\n",
+        "log_wavelengths = jnp.linspace(jnp.log10(LINE_CENTER - 1), jnp.log10(LINE_CENTER + 1), 600)\n",
+        "wavelength = np.array(10 ** log_wavelengths)\n",
+        "\n",
+        "spectra = simulate_observed_flux(emulator.intensity, spotted_mesh, log_wavelengths)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "id": "f8fe8ad7",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Period for v_eq = 10 km/s: 437121.20 seconds (5.06 days)\n"
+          ]
+        }
+      ],
+      "source": [
+        "from spice.models.mesh_transform import add_rotation, evaluate_rotation\n",
+        "\n",
+        "\n",
+        "m_rotated = add_rotation(spotted_mesh, 10)\n",
+        "\n",
+        "# Assuming 10 km/s is the equatorial rotational velocity,\n",
+        "# and the period is the time it takes to make a full rotation (in seconds).\n",
+        "# We also need the radius at which this velocity applies. Let's use the mean radius of the mesh:\n",
+        "radius = 1.0 # in solar radii\n",
+        "radius_m = radius * 6.957e8  # convert solar radii to meters\n",
+        "\n",
+        "v_eq = 10e3  # 10 km/s in m/s\n",
+        "period_sec = 2 * np.pi * radius_m / v_eq\n",
+        "print(f\"Period for v_eq = 10 km/s: {period_sec:.2f} seconds ({period_sec/86400:.2f} days)\")\n",
+        "\n",
+        "times = jnp.linspace(0.0, period_sec, 100)\n",
+        "\n",
+        "rotated_models = [evaluate_rotation(m_rotated, t) for t in times]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "id": "1e38c245",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rotated_spectra = [simulate_observed_flux(emulator.intensity, s, log_wavelengths) for s in rotated_models]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "id": "31abfb8e",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/var/folders/7r/n_x0ntj511v_0gt816mgrc1c0000gq/T/ipykernel_91368/833358053.py:3: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
+            "  plt.show()\n"
+          ]
+        }
+      ],
+      "source": [
+        "for s in rotated_spectra:\n",
+        "    plt.plot(wavelength, s[:, 0]/s[:, 1])\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "id": "77922b41",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rotated_spectra = np.array(rotated_spectra)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "id": "32aaf9c6",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'ca_spot.gif'"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from spice.plots.plot_mesh import animate_mesh_and_spectra\n",
+        "\n",
+        "\n",
+        "animate_mesh_and_spectra(rotated_models, rotated_spectra[:, :, 0]/rotated_spectra[:, :, 1],\n",
+        "                         wavelength, property=0, property_label='Temperature [K]', filename='ca_spot.gif',\n",
+        "                         plot_legend=False)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "6cb857f8",
       "metadata": {},
       "outputs": [],
-      "source": [
-        "log_wavelengths = jnp.linspace(jnp.log10(8535.0), jnp.log10(8554.0), 600)\n",
-        "wavelength = np.array(10 ** log_wavelengths)\n",
-        "\n",
-        "\n",
-        "def synthesize_disk(mesh_model):\n",
-        "    teff = mesh_model.parameters[:, 0]\n",
-        "    logg = mesh_model.parameters[:, 1]\n",
-        "    mu = jnp.clip(mesh_model.mus, 0.0, 1.0)\n",
-        "    visible = mu > 0\n",
-        "    areas = mesh_model.visible_cast_areas\n",
-        "\n",
-        "    def local_spec(t, g, mu_val):\n",
-        "        return emulator.intensity(log_wavelengths, mu_val, jnp.array([t, g]))\n",
-        "\n",
-        "    stacked = jax.vmap(local_spec)(teff[visible], logg[visible], mu[visible])\n",
-        "    I = stacked[..., 0]\n",
-        "    cont = stacked[..., 1]\n",
-        "    weights = areas[visible][:, None]\n",
-        "    flux = jnp.sum(I * weights, axis=0) / jnp.sum(weights)\n",
-        "    cont_flux = jnp.sum(cont * weights, axis=0) / jnp.sum(weights)\n",
-        "    return flux, cont_flux\n",
-        "\n",
-        "flux_base, cont_base = synthesize_disk(mesh)\n",
-        "flux_spotted, cont_spotted = synthesize_disk(spotted_mesh)\n",
-        "\n",
-        "norm_base = np.array(flux_base / cont_base)\n",
-        "norm_spotted = np.array(flux_spotted / cont_spotted)\n",
-        "difference = (norm_spotted - norm_base) * 1e3\n",
-        "\n",
-        "fig, axes = plt.subplots(2, 1, figsize=(9, 7), sharex=True, constrained_layout=True)\n",
-        "axes[0].plot(wavelength, norm_base, label='uniform mesh', lw=2)\n",
-        "axes[0].plot(wavelength, norm_spotted, label='ringed spot mesh', lw=2)\n",
-        "axes[0].set_ylabel('Normalized flux')\n",
-        "axes[0].legend()\n",
-        "axes[0].set_title('Disk-integrated Ca II 8542 \u00c5 profile')\n",
-        "\n",
-        "axes[1].plot(wavelength, difference, color='tab:red')\n",
-        "axes[1].axhline(0.0, color='black', lw=0.8, ls='--')\n",
-        "axes[1].set_ylabel('\u0394 flux [ppt]')\n",
-        "axes[1].set_xlabel('Wavelength [\u00c5]')\n",
-        "axes[1].set_title('Ring spot - uniform (parts per thousand)')\n",
-        "plt.show()\n"
-      ]
+      "source": []
     }
   ],
   "metadata": {
