Scale the radii to the theoretical volumr

--- a/tutorial/paper_results/icosphere_properties.ipynb
+++ b/tutorial/paper_results/icosphere_properties.ipynb
@@ -20,7 +20,7 @@
     "%matplotlib inline\n",
     "\n",
     "# Add the parent directory to the path to import the package\n",
-    "sys.path.append(os.path.abspath('..'))\n",
+    "sys.path.insert(0, os.path.abspath('../../src'))\n",
     "from spice.models.mesh_generation import icosphere\n",
     "from spice.models.mesh_model import IcosphereModel\n",
     "\n",
